--- a/package.json
+++ b/package.json
@@ -6,9 +6,26 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "griddle-react": "^1.13.1",
+    "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-native": "^0.71.8",
+    "react-navigation": "^4.4.4",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "react-toastify": "^9.1.2",
+    "react-with-hooks": "^1.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
